css/index.css
body
{
	background-color: white;
    font-family: 'Lato', sans-serif;
}

#container
{
	width: 100%;
}
#outertopic2
	{background-color: black;color:white}
.outertopic::before
{
	position: absolute;
	width: 100%;
	height: 16vw;
	z-index: 2;
	margin-top:-8vw;
}
#outertopic2::before
	{background:linear-gradient(to bottom left, white 50%,black 0)}
#outertopic3::before
	{background:linear-gradient(to bottom left, black 50%,white 0)}
.overflow-wrapper
{
	overflow: hidden;
}
.topic
{
	position:relative;
	height: 110vw;
	width: 100%;
	text-align: center;
	margin-top: 10px;
}
.innertopic
{
	position:relative;
	width:90%;
	top: 50%;
	left:50%;
	-webkit-transform: translate(-50%,-50%);
	-moz-transform: translate(-50%,-50%);
	-o-transform:translate(-50%,-50%);
	transform: translate(-50%,-50%);
}
.topic h1
{
	font-size:7vw;
}
.step
{
	font-size: 5vw;
	margin: 0 auto 0 auto;
	text-align: center;
}
.step p
{
	margin: 5vw 0 3vw 0;
}
.step a
{
	color:black;
}
.show-buttons
{
	position: relative;
	font-size: 4vw;
}
.showmore,
.showless
{
	display:inline-block;
	padding: 2vw;
	margin: 0 auto;
	cursor: pointer;
	opacity: 1;
	-webkit-transition: .5s;
	-moz-transition: .5s;
	-ms-transition: .5s;
	-o-transition: .5s;
	transition: .5s;
}
.showless
{
	position: absolute;
	left: 50%;
	-webkit-transform: translate(-50%, -15%);
	-moz-transform: translate(-50%, -15%);
	-o-transform:translate(-50%, -15%);
	transform: translate(-50%, -15%);
	top: 0;
}
.novisibility
{
	visibility: hidden;
}
.novisibility.showless
{
	-webkit-transform: translate(-50%, 0) rotateX(90deg);
	-moz-transform: translate(-50%, 0) rotateX(90deg);
	-o-transform: translate(-50%, 0) rotateX(90deg);
	transform: translate(-50%, 0) rotateX(90deg);
}
.novisibility.showmore
{
	-webkit-transform: rotateX(90deg);
	-moz-transform: rotateX(90deg);
	-o-transform:rotateX(90deg);
	transform: rotateX(90deg);
}
.arrow-right.icon,
.arrow-down.icon,
.arrow-up.icon
{
	color: currentColor;
	position: relative;
	margin: 1vw 0 1vw 0;
	left:50%;
	width: 1px;
	height: 15px;
	background-color: currentColor;
	-webkit-transition: 0.5s;
	-moz-transition: 0.5s;
	-ms-transition:0.5s;
	-o-transition:0.5s;
	transition: 0.5s;
}
.arrow-up.icon
{
	margin: 1vw 0 1vw 0;
}
.arrow-right.icon
{
	margin:0;
	display:inline-block;
	left: 1vw;
	top:-3px;
	width: 15px;
	height: 1px;
}
.arrow-down.icon:before
{
	position: relative;
	left: -5px;
	top: 3px;
	width: 10px;
	height: 10px;
	border-top: solid 1px currentColor;
	border-right: solid 1px currentColor;
	-webkit-transform: rotate(135deg);
	transform: rotate(135deg);
}
.arrow-up.icon:before 
{
	position: relative;
	left: -5px;
	top: 1px;
	width: 10px;
	height: 10px;
	border-top: solid 1px currentColor;
	border-right: solid 1px currentColor;
	-webkit-transform: rotate(-45deg);
	transform: rotate(-45deg);
}
.arrow-right.icon:before
{
	position: relative;
	left: 4px;
	top: -5px;
	width: 10px;
	height: 10px;
	border-top: solid 1px currentColor;
	border-right: solid 1px currentColor;
	-webkit-transform: rotate(45deg);
	transform: rotate(45deg);
}
.showmore:hover .arrow-down.icon
{
	margin: 2vw 0 0 0;
}
.showless:hover .arrow-up.icon
{
	margin: 0 0 2vw 0;
}
.showmore:hover .arrow-right.icon
{
	left:2vw;
}
.morecontent
{
	margin-top: -50px;
	max-height:1700px; /*value bigger than div can ever get, but as small as possible */
	-webkit-transition: 1s ease-in-out;
	-moz-transition: 1s ease-in-out;
	-ms-transition: 1s ease-in-out;
	-o-transition: 1s ease-in-out;
	transition: 1s ease-in-out;
}
.morecontent.less
{
	visibility:hidden;
	max-height: 0px!important;
}
#howcontent,
#whatcontent
{
	text-align:center;
	margin: 0 0 100px 0;
}
.element
{
	margin: 0 auto 25px auto;
    width: 90%;
}
.elementtitle
{
    font-size: 17px;
    font-weight: bold;
    font-style: italic;
}
.elementpic
{
    background-repeat: no-repeat;
	background-size: cover !important;
	background-position: center center !important;
    width: 80px;
    height: 80px;
    margin-left: auto;
    margin-right: auto;
}
.element p 
{
	font-size: 12px;
}

#passiontitle
	{color: rgb(228, 59, 59);}
#passionimg
	{background-image: url(../img/how/min/passion.png);}
#techtitle
	{color: green;}
#techimg
{
    width: 197px;
    height: 80px;
    background-image: url(../img/how/min/tech.png);
}
#knowledgetitle
	{color: orangered;}
#knowledgeimg
{
    margin-top: 10px;
    background-image: url(../img/how/min/knowledge.png);
}
#intuitivetitle
	{color: rgb(95, 95, 95);}
#intuitiveimg
{
    margin-top: 10px;
    background-image: url(../img/how/min/intuitive.png);
}
#responsivetitle
	{color: rgb(192, 91, 138);}
#responsiveimg
{
	margin-top: 10px;
	background-image: url(../img/how/min/responsive.png);
}

#orderbottomheader
{
	text-align: center;
}

.orderbtn {
	margin: 20px auto;
	padding: 20px 30px 20px 30px;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	
	background: #00a3cc;
	color: white;
	text-align: center;
	font-size: 20px;
	text-decoration: none;
	line-height: 50px;
	width:80%;
	
	-webkit-transition: .7s;
	-moz-transition: .7s;
	-ms-transition:.7s;
	-o-transition:.7s;
	transition: .7s;
}

.orderbtn:hover {
	background: #00aeff;
	font-size: 23px;
}

/* Small devices (phones, 350px and up) */
@media only screen and (min-width: 350px) {
	
	.outertopic::before
	{
		height: 10vw;
		margin-top:-5vw;
	}
	.topic
	{
		height: 100vw;
	}
	.show-buttons
	{
		font-size: 3.5vw;
	}
    .step p,
	.element p 
    {
        font-size: 4.5vw;
		margin: 4.5vw 0 2.5vw 0;
    }
	
	.elementpic
	{
		width: 100px;
		height: 100px;
	}
} 
/* Small devices (portrait tablets, landscape phones, 640px and up) */
@media only screen and (min-width: 640px) {
    
	.outertopic::before
	{
		height: 80px;
		margin-top:-40px;
	}
	.topic
	{
		height: 80vw;
	}
	.topic h1
	{
		font-size:5.5vw;
	}
	.show-buttons
	{
		font-size: 3vw;
	}
	.showmore,
	.showless
	{
		padding: 1vw;
	}
    .step p,
	.element p 
    {
        font-size: 4vw;
		margin: 4vw 0 2vw 0;
    }
	.innertopic
	{
		width:85%;
	}
	
	.innertopic.afterfake
	{
		margin-top:-40px;
	}
    .elementtitle
    {
        font-size: 28px;
    }
	.elementpic
	{
		width: 120px;
		height: 120px;
	}
} 
/* Medium devices (landscape tablets, 800px and up) */
@media only screen and (min-width: 800px) {
	
	.topic
	{
		height: 65vw;
	}
	.topic h1
	{
		font-size:5vw;
	}
	.show-buttons
	{
		font-size: 2.5vw;
	}
    .step p,
	.element p 
    {
        font-size: 3vw;
		margin: 3vw 0 1.5vw 0;
    }
	
	.innertopic
	{
		width:80%;
	}
	.elementtitle
    {
        font-size: 23px;
        display: inline-block;
        margin-right: 50px;
    }
    .elementpic
    {
        display: inline-block;
        vertical-align: middle;
		width: 150px;
		height: 150px;
    }
} 
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
	
	.topic
	{
		height: 60vw;
	}
	.topic h1
	{
		font-size:4.5vw;
	}
	.show-buttons
	{
		font-size: 2vw;
	}
    .step p,
	.element p 
    {
        font-size: 2.5vw;
		margin: 2.5vw 0 0.5vw 0;
    }
	
	.innertopic
	{
		width:80%;
	}
	
	.arrow-down.icon,
	.arrow-up.icon
	{
		width: 2px;
		height: 20px;
	}
	.arrow-right.icon
	{
		width: 20px;
		height: 2px;
	}
	.arrow-down.icon:before
	{
		position: relative;
		left: -5px;
		top: 8px;
		width: 10px;
		height: 10px;
		border-top: solid 2px currentColor;
		border-right: solid 2px currentColor;
	}
	.arrow-up.icon:before 
	{
		position: relative;
		left: -5px;
		top: 1px;
		width: 10px;
		height: 10px;
		border-top: solid 2px currentColor;
		border-right: solid 2px currentColor;
	}
	.arrow-right.icon:before
	{
		position: relative;
		left:7px;
		top: -5px;
		width: 10px;
		height: 10px;
		border-top: solid 2px currentColor;
		border-right: solid 2px currentColor;
	}
	
	.morecontent
	{
		margin-top: 110px;
	}
	#howcontent,
	#whatcontent
	{
		margin: 0 0 180px 0;
	}
	.orderbtn
	{
		padding-top: 50px;
		padding-bottom: 50px;
		font-size: 36px;
	}
	.orderbtn:hover {
		font-size: 40px;
	}
} 
/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
    
	.topic
	{
		height: 50vw;
	}
	.topic h1
	{
		font-size:4vw;
	}
	.show-buttons
	{
		font-size: 1.5vw;
	}
    .step p,
	.element p 
    {
        font-size: 2vw;
    }
	
	.element
    {
        margin-bottom: 50px;
    }
    .elementtitle
    {
        font-size: 35px;
        display: inline-block;
        margin-right: 50px;
    }
    .elementpic
    {
        display: inline-block;
        vertical-align: middle;
    }
}
/* Extra enormous devices (TV, 1700px and up) */
@media only screen and (min-width: 1700px) {
	.topic
	{
		height: 40vw;
	}
	.topic h1
	{
		font-size:3.5vw;
	}
    .elementtitle
    {
        font-size: 40px;
    }
}

